--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -41,8 +41,6 @@
     series = {IPDPS '13},
     year = {2013},
     pages = {},
-    address={""},
-    publisher={""}
 }
 
 @inproceedings{kademlia02,
@@ -334,13 +332,12 @@
 @article{bal:92,
    author    = {H. E. Bal and M. F. Kaashoek and A. S. Tanenbaum},
    title     = {{Orca: A Language For Parallel Programming of Distributed Systems}},
-   journal   = {IEEE Trans. on Software Eng.},
+   journal   = {IEEE Transactions on Software Eng.},
    year      = {1992},
    month     = {Mar},
    volume    = {18},
    number    = {3},
    pages     = {190--205},
-   xx        = {yes}
 }
 
 @article{ahuja:86,
@@ -476,7 +473,6 @@
     number={"2"},
     pages={"163--181"},
     issn={"1573-7543"},
-    doi={"10.1007/s10586-011-0162-y"},
 }
 
 @inproceedings{mitchell:13,
@@ -521,7 +517,7 @@
   title={{uthash User Guide}},
   month=aug,
   year=2017,
-  howpublished={\url{http://troydhanson.github.io/uthash/userguide.html} } 
+  howpublished={\url{https://goo.gl/eynYX1}}
 }
 
 @inproceedings{comhpc16,
@@ -602,3 +598,21 @@
     month = jan,
     year = 2016
 }
+
+@inproceedings{li:17,
+ author = {Li, Bojie and Ruan, Zhenyuan and Xiao, Wencong and Lu, Yuanwei and Xiong, Yongqiang and Putnam, Andrew and Chen, Enhong and Zhang, Lintao},
+ title = {KV-Direct: High-Performance In-Memory Key-Value Store with Programmable NIC},
+ booktitle = {Proceedings of the 26th Symposium on Operating Systems Principles},
+ series = {SOSP '17},
+ year = {2017},
+ isbn = {978-1-4503-5085-3},
+ location = {Shanghai, China},
+ pages = {137--152},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/3132747.3132756},
+ doi = {10.1145/3132747.3132756},
+ acmid = {3132756},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Key-Value Store, Performance, Programmable Hardware},
+} 
