--- a/doc/paper17/paper.tex
+++ b/doc/paper17/paper.tex
@@ -1,7 +1,8 @@
+\documentclass[sigconf, review=false, anonymous=false]{acmart}
+
 %\documentclass[letterpaper,times,10pt]{article}
 %\documentclass[letterpaper,times,10pt,twocolumn]{article}
-\documentclass[conference,letterpaper,10pt,times]{IEEEtran}
-%\documentclass[sigplan, review=false, anonymous=false]{acmart}
+%\documentclass[conference,letterpaper,10pt,times]{IEEEtran}
 %\usepackage[top=.9in,left=1in,right=.9in,bottom=1in]{geometry}
 %\usepackage{latex8}
 %\usepackage{fullpage}
@@ -19,7 +20,7 @@
 \usepackage{times}
 \usepackage{amssymb}
 \usepackage{amsmath}
-\usepackage[pdftex]{graphicx}
+%\usepackage[pdftex]{graphicx}
 \usepackage{subcaption}
 \usepackage{url}
 \usepackage{color}
@@ -30,7 +31,7 @@
 
 
 %\lstloadlanguages{C}
-\pagestyle{empty}
+%\pagestyle{empty}
 
 %\title{Efficient Runtime Support for a Partitioned Global Logical Address Space}
 
@@ -45,25 +46,16 @@
 % %\end{normalsize}
 % }
 
-%\author{D. Brian Larkins}
-%\affiliation{Rhodes College}
-%\affiliation{Memphis, TN}
-%\email{larkinsb@rhodes.edu}
-%\author{James Dinan}
-%\affiliation{Intel Corporation}
-%\affiliation{Hudson, MA}
-%\email{james.dinan@intel.com}
-
-\usepackage[
-  pdfborder={0 0 0},
-  colorlinks=false,
-  pdfpagelabels=false,
-  pdftitle={Efficient Runtime Support for a Partitioned Global Logical Address Space},
-  pdfauthor={D. Brian Larkins, John Snyder, and James Dinan},
-  pdfsubject={},
-  pdfkeywords={},
-  bookmarks=false,
-]{hyperref}
+%\usepackage[
+%  pdfborder={0 0 0},
+%  colorlinks=false,
+%  pdfpagelabels=false,
+%  pdftitle={Efficient Runtime Support for a Partitioned Global Logical Address Space},
+%  pdfauthor={D. Brian Larkins, John Snyder, and James Dinan},
+%  pdfsubject={},
+%  pdfkeywords={},
+%  bookmarks=false,
+%]{hyperref}
 
 \newcommand{\pdht}{{PDHT}\xspace}
 
@@ -77,22 +69,37 @@
 
 % Document starts
 \begin{document}
-\IEEEoverridecommandlockouts
+%\IEEEoverridecommandlockouts
+
 % Title portion
 \title{Efficient Runtime Support for a Partitioned Global Logical Address Space}
-\author{\IEEEauthorblockN{D. Brian Larkins\IEEEauthorrefmark{1}, John Snyder\IEEEauthorrefmark{2}}
-\IEEEauthorblockA{Rhodes College}
-\IEEEauthorblockA{Memphis, TN}
-\IEEEauthorblockA{Email: \IEEEauthorrefmark{1}larkinsb@rhodes.edu, \IEEEauthorrefmark{2}snyjm-18@rhodes.edu}
-\and
-\IEEEauthorblockN{James Dinan\IEEEauthorrefmark{3}}
-\IEEEauthorblockA{Intel Corporation}
-\IEEEauthorblockA{Hudson, MA}
-\IEEEauthorblockA{Email: james.dinan@intel.com}
-\thanks{\hspace{-1em}CC/Grid; Washington, D.C.; May 2018\newline
-   5/18/\$31.00 \copyright 2018 IEEE}
-   %978-1-5090-3829-9/16/\$31.00 \copyright 2016 IEEE}
-}
+
+\author{D. Brian Larkins}
+\author{John Snyder}
+\email{{larkinsb,snyjm-18}@rhodes.edu}
+\affiliation{Rhodes College}
+\affiliation{Memphis, TN}
+
+
+\author{James Dinan}
+\email{james.dinan@intel.com}
+\affiliation{Intel Corporation}
+\affiliation{Hudson, MA}
+
+
+%\author{\IEEEauthorblockN{D. Brian Larkins\IEEEauthorrefmark{1}, John Snyder\IEEEauthorrefmark{2}}
+%\IEEEauthorblockA
+%\IEEEauthorblockA{Memphis, TN}
+%\IEEEauthorblockA{Email: \IEEEauthorrefmark{1}larkinsb@rhodes.edu, \IEEEauthorrefmark{2}snyjm-18@rhodes.edu}
+%\and
+%\IEEEauthorblockN{James Dinan\IEEEauthorrefmark{3}}
+%\IEEEauthorblockA{Intel Corporation}
+%\IEEEauthorblockA{Hudson, MA}
+%\IEEEauthorblockA{Email: james.dinan@intel.com}
+%\thanks{\hspace{-1em}CC/Grid; Washington, D.C.; May 2018\newline
+%   5/18/\$31.00 \copyright 2018 IEEE}
+%   %978-1-5090-3829-9/16/\$31.00 \copyright 2016 IEEE}
+%}
 
 
 %\lstset{language=C,basicstyle={\tt \scriptsize},framexbottommargin=3pt,emph={gt_group_t,gt_tree_t,gt_visitor_t,gt_node_t,gt_nodeptr_t,gt_visit_node_t,size_t},emphstyle=\bf,framexrightmargin=-5ex,framextopmargin=1.5ex}
@@ -101,20 +108,21 @@
 
 %\doublespacing
 
+
 \thispagestyle{empty}
 
 \input{abstract}
 \input{introduction}
 \input{background}
 \input{implementation}
-
-\pagebreak
 \input{results}
 \input{conclusion}
 
+\pagebreak
+
 %\singlespacing
-%\bibliographystyle{ACM-Reference-Format}
-\bibliographystyle{IEEEtran}
+\bibliographystyle{ACM-Reference-Format}
+%\bibliographystyle{IEEEtran}
 \bibliography{bibdb}
 %\input{appendix}
 %\pagebreak
