--- a/doc/paper17/paper.tex
+++ b/doc/paper17/paper.tex
@@ -72,7 +72,7 @@
 %\IEEEoverridecommandlockouts
 
 % Title portion
-\title{Efficient Runtime Support for a Partitioned Global Logical Address Space}
+\title{Efficient Runtime Support for a \\Partitioned Global Logical Address Space}
 
 \author{D. Brian Larkins}
 \author{John Snyder}
