Replace "Conference'17" with "ICPP'18"
Former-commit-id: 18f1b8d37737e992b6f98921f5fe6543f23f84fe

--- a/doc/paper17/paper.tex
+++ b/doc/paper17/paper.tex
@@ -104,6 +104,7 @@
 
 %\lstset{language=C,basicstyle={\tt \scriptsize},framexbottommargin=3pt,emph={gt_group_t,gt_tree_t,gt_visitor_t,gt_node_t,gt_nodeptr_t,gt_visit_node_t,size_t},emphstyle=\bf,framexrightmargin=-5ex,framextopmargin=1.5ex}
 
+\acmConference[ICPP'18]{International Conference on Parallel Processing}{August 2018}{Eugene, OR USA}
 \maketitle
 
 %\doublespacing
