Update author list to ACM style
Former-commit-id: c6d9408623783d2b99a88667f47dbe23604d49de

--- a/doc/paper17/paper.tex
+++ b/doc/paper17/paper.tex
@@ -75,16 +75,28 @@
 \title{Efficient Runtime Support for a \\Partitioned Global Logical Address Space}
 
 \author{D. Brian Larkins}
-\author{John Snyder}
-\email{{larkinsb,snyjm-18}@rhodes.edu}
-\affiliation{Rhodes College}
-\affiliation{Memphis, TN}
+\affiliation{
+    \institution{Rhodes College}
+    \city{Memphis}
+    \state{TN}
+}
+\email{larkinsb@rhodes.edu}
 
+\author{John Snyder}
+\affiliation{
+    \institution{Rhodes College}
+    \city{Memphis}
+    \state{TN}
+}
+\email{snyjm-18@rhodes.edu}
 
 \author{James Dinan}
+\affiliation{
+    \institution{Intel Corporation}
+    \city{Hudson}
+    \state{MA}
+}
 \email{james.dinan@intel.com}
-\affiliation{Intel Corporation}
-\affiliation{Hudson, MA}
 
 
 %\author{\IEEEauthorblockN{D. Brian Larkins\IEEEauthorrefmark{1}, John Snyder\IEEEauthorrefmark{2}}
