Fix weird quoting in bib entries
Former-commit-id: 994806c76646dadfac90b21a23d0d051a64eae8f

--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -365,18 +365,18 @@
 }
 
 @inproceedings{larkins:12,
-    author = {"Larkins, D. Brian"},
-    title = {"Improving Data Locality for Irregular Partitioned Global Address Space Parallel Programs"},
-    booktitle = {"Proc. 50th Annual Southeast Regional Conference"},
-    series = {"ACM-SE '12"},
-    year = {"2012"},
-    isbn = {"978-1-4503-1203-5"},
-    location = {"Tuscaloosa, Alabama"},
-    pages = {"280--285"},
-    doi = {"10.1145/2184512.2184577"},
-    acmid = {"2184577"},
-    publisher = {"ACM"},
-    address = {"New York, NY, USA"},
+    author = {Larkins, D. Brian},
+    title = {Improving Data Locality for Irregular Partitioned Global Address Space Parallel Programs},
+    booktitle = {Proc. 50th Annual Southeast Regional Conference},
+    series = {ACM-SE '12},
+    year = {2012},
+    isbn = {978-1-4503-1203-5},
+    location = {Tuscaloosa, Alabama},
+    pages = {280--285},
+    doi = {10.1145/2184512.2184577},
+    acmid = {2184577},
+    publisher = {ACM},
+    address = {New York, NY, USA},
 }
 
 @INPROCEEDINGS{namashivayam:15, 
@@ -465,14 +465,14 @@
 }
 
 @Article{docan:12,
-    author= {"Docan, Ciprian and Parashar, Manish and Klasky, Scott"},
-    title={"DataSpaces: an interaction and coordination framework for coupled simulation workflows"},
-    journal={"Cluster Computing"},
-    year={"2012"},
-    volume={"15"},
-    number={"2"},
-    pages={"163--181"},
-    issn={"1573-7543"},
+    author= {Docan, Ciprian and Parashar, Manish and Klasky, Scott},
+    title={{DataSpaces}: an interaction and coordination framework for coupled simulation workflows},
+    journal={Cluster Computing},
+    year={2012},
+    volume={15},
+    number={2},
+    pages={163--181},
+    issn={1573-7543},
 }
 
 @inproceedings{mitchell:13,
